@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_run.c,v 1.25 2002/07/18 22:52:44 dupuy Exp $";
+static const char libbk__rcsid[] = "$Id: b_run.c,v 1.26 2002/09/05 21:33:17 lindauer Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2001";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -91,6 +91,7 @@ struct bk_run
   dict_h		br_poll_funcs;		///< Poll functions
   dict_h		br_ondemand_funcs;	///< On demands functions
   dict_h		br_idle_funcs;		///< Idle tasks (nothing else to do)
+  dict_h		br_bnbios;		///< Blocked bnbios
   pq_h			*br_equeue;		///< Event queue
   volatile sig_atomic_t	br_signums[NSIG];	///< Number of signal events we have received
   struct br_sighandler	br_handlerlist[NSIG];	///< Handlers for signals
@@ -231,6 +232,34 @@ static int brofl_ko_cmp(void *a, struct bk_run_ondemand_func *b);
 
 
 /**
+ * @name Defines: bnbiol_clc
+ * bnbio list CLC definitions
+ * to hide CLC choice.
+ */
+// @{
+#define bnbiol_create(o,k,f)		dll_create((o),(k),(f))
+#define bnbiol_destroy(h)		dll_destroy(h)
+#define bnbiol_insert(h,o)		dll_insert((h),(o))
+#define bnbiol_insert_uniq(h,n,o)	dll_insert_uniq((h),(n),(o))
+#define bnbiol_append(h,o)		dll_append((h),(o))
+#define bnbiol_append_uniq(h,n,o)	dll_append_uniq((h),(n),(o))
+#define bnbiol_search(h,k)		dll_search((h),(k))
+#define bnbiol_delete(h,o)		dll_delete((h),(o))
+#define bnbiol_minimum(h)		dll_minimum(h)
+#define bnbiol_maximum(h)		dll_maximum(h)
+#define bnbiol_successor(h,o)		dll_successor((h),(o))
+#define bnbiol_predecessor(h,o)		dll_predecessor((h),(o))
+#define bnbiol_iterate(h,d)		dll_iterate((h),(d))
+#define bnbiol_nextobj(h,i)		dll_nextobj(h,i)
+#define bnbiol_iterate_done(h,i)	dll_iterate_done(h,i)
+#define bnbiol_error_reason(h,i)	dll_error_reason((h),(i))
+static int bnbiol_oo_cmp(struct bk_iohh_bnbio *a, struct bk_iohh_bnbio *b);
+static int bnbiol_ko_cmp(void *a, struct bk_iohh_bnbio *b);
+// @}
+
+
+
+/**
  * @name Signal static variables
  *
  * Data which signal handlers running on the signal stack can modify.
@@ -297,6 +326,12 @@ struct bk_run *bk_run_init(bk_s B, bk_flags flags)
   if (!(run->br_ondemand_funcs = brfl_create((dict_function)brofl_oo_cmp,(dict_function)brofl_ko_cmp, DICT_UNORDERED)))
   {
     bk_error_printf(B, BK_ERR_ERR, "Could not create on demand function list\n");
+    goto error;
+  }
+
+  if (!(run->br_bnbios = bnbiol_create((dict_function)bnbiol_oo_cmp, (dict_function)bnbiol_ko_cmp, DICT_UNORDERED)))
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Could not create bnbio list\n");
     goto error;
   }
 
@@ -392,6 +427,9 @@ void bk_run_destroy(bk_s B, struct bk_run *run)
     brof_destroy(B, brof);
   }
   brofl_destroy(run->br_ondemand_funcs);
+  
+  // bnbios are destroyed elsewhere
+  bnbiol_destroy(run->br_bnbios);
 
   br_signums = NULL;
 
@@ -1697,6 +1735,112 @@ bk_run_on_demand_remove(bk_s B, struct bk_run *run, void *handle)
 
 
 /**
+ * Register a bnbio for notification when 
+ * bk_run_bnbio_cancel is called.
+ *
+ *	@param B BAKA Thread/global state
+ *	@param bib pointer to bnbio struct
+ *	@return <i>0</i> on success
+ *	@return <i>-1</i> on error
+ */
+int 
+bk_run_register_bnbio(bk_s B, struct bk_iohh_bnbio *bib)
+{
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");  
+
+  if (!bib)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Invalid arguments\n");
+    goto error;
+  }
+
+  if (bnbiol_insert(bib->bib_bpi->bpi_ioh->ioh_run->br_bnbios, bib) != DICT_OK)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Failed to insert bnbio into list\n");
+    goto error;
+  }
+
+  BK_RETURN(B, 0);
+  
+ error:
+  BK_RETURN(B, -1);
+}
+
+
+
+/**
+ * Unregister a bnbio when it no longer needs notification
+ * from bk_run_bnbio_cancel.  Also resets the cancellation
+ * flag.
+ *
+ *	@param B BAKA Thread/global state
+ *	@param bib pointer to bnbio struct
+ *	@return <i>0</i> on success
+ *	@return <i>-1</i> on error
+ */
+int 
+bk_run_unregister_bnbio(bk_s B, struct bk_iohh_bnbio *bib)
+{
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
+
+  if (!bib)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Invalid arguments\n");
+    goto error;
+  }
+
+  // reset flag
+  BK_FLAG_CLEAR(bib->bib_flags, BK_IOHH_BNBIO_FLAG_CANCEL);
+
+  if (bnbiol_delete(bib->bib_bpi->bpi_ioh->ioh_run->br_bnbios, bib) != DICT_OK)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Failed to delete bnbio from list\n");
+    goto error;
+  }
+
+  BK_RETURN(B, 0);
+  
+ error:
+  BK_RETURN(B, -1);
+}
+
+
+
+/**
+ * Notify all registered bnbios that they should 
+ * stop blocking
+ */
+int
+bk_run_bnbio_cancel(bk_s B, struct bk_run *run)
+{
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
+  dict_iter it;
+  struct bk_iohh_bnbio *bib = NULL;
+
+  if (!run)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Invalid arguments\n");
+    goto error;
+  }
+
+  it = bnbiol_iterate(run->br_bnbios, DICT_FROM_END);
+
+  while (bib = (struct bk_iohh_bnbio *) bnbiol_nextobj(run->br_bnbios, it))
+  {
+    BK_FLAG_SET(bib->bib_flags, BK_IOHH_BNBIO_FLAG_CANCEL);
+  }
+
+  bnbiol_iterate_done(run->br_bnbios, it);
+
+  BK_RETURN(B, 0);
+
+ error:
+  BK_RETURN(B, -1);
+}
+
+
+
+/**
  * Allocate a brf -- on-demand function structure
  *
  *	@param B BAKA Thread/global state
@@ -1815,4 +1959,16 @@ static int brofl_oo_cmp(struct bk_run_ondemand_func *a, struct bk_run_ondemand_f
 static int brofl_ko_cmp(void *a, struct bk_run_ondemand_func *b)
 {
   return ((char *)a)-((char *)b->brof_key);
+}
+
+/*
+ * baka bnbio list CLC routines
+ */
+static int bnbiol_oo_cmp(struct bk_iohh_bnbio *a, struct bk_iohh_bnbio *b)
+{
+  return (a - b);
+}
+static int bnbiol_ko_cmp(void *a, struct bk_iohh_bnbio *b)
+{
+  return (((struct bk_iohh_bnbio*) a) - b);
 }
